@@ -1,3 +1,7 @@
+2001-05-08  Ryan Nunn <triforce@merlin.net.au>
+	* audio/xmidi.cc: Amazing optimization. 2 Lines of code added,
+	  potential 100x speed increase when reading .xmi files.
+
 2001-05-15  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Audio.cc: Fixed "Chipmunk Guardian"!  (Playback speed for
